--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<com.skyfishjy.library.RippleBackground
+<com.mandarin.library.RippleBackground
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -25,4 +25,4 @@
         android:layout_marginRight="6dp"
         android:src="@drawable/phone2"
         android:visibility="invisible"/>
-</com.skyfishjy.library.RippleBackground>
+</com.mandarin.library.RippleBackground>
